fix: Add a big z-index to dropdown menu to prevent to be hidden by other elements, Remove showErrorMessage from Home and add it to Settings before redirection to Home

--- a/front/app/src/css/style.css
+++ b/front/app/src/css/style.css
@@ -23,7 +23,7 @@ a, button, div [role="button"], input[type="submit"], input[type="button"] {
   /* font-size: 0.8em; */
 }
 
-.navbar-dropdown-menu {
+.dropdown-menu {
   z-index: 1050 !important; /* Keep dropdown always on top */
 }
 
